--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -13,6 +13,6 @@
     command : sudo systemctl start docker
 
     - name: Deploy Docker Container
-    command: docker run -itd -p 8084:8081 kalyanikolley/finance-me:1.0
+    command: docker run -itd -p 8084:8081 kalyanikolley/myimg:1.0
 
 
